--- a/src/main/resources/templates/site/home.html
+++ b/src/main/resources/templates/site/home.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
         <div class="navbar-login">
-            <a href="#login" class="login-button">Вхід</a>
+            <a href="/login" class="login-button">Вхід</a>
         </div>
         <div class="navbar-toggle" id="mobile-menu">
             <span class="bar"></span>
