--- a/src/main/resources/templates/site/all/login.html
+++ b/src/main/resources/templates/site/all/login.html
@@ -100,15 +100,19 @@
                 Invalid username or password!
             </div>
             <div class="form-group">
-                <label for="username">Email:</label>
-                <input type="text" class="form-control" id="username" name="username" required placeholder="user@example.com">
+                <label for="username">Електронна пошта:</label>
+                <input type="text" class="form-control" id="username" name="username"
+                       required placeholder="user@example.com">
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required placeholder="password">
+                <label for="password">Пароль:</label>
+                <input type="password" class="form-control" id="password" name="password"
+                       required placeholder="123456789">
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-            <a class="p-3" style="color: #00BFFF" th:href="@{/register}">Register</a>
+            <div class="justify-content-between" style="display: flex; align-items: center;">
+                <button type="submit">Ввійти</button>
+                <span style="margin-left: 10px;"><a class="p-3" style="color: #00BFFF" th:href="@{/register}">Новенький?</a></span>
+            </div>
         </form>
     </div>
 </div>
